--- a/slides/NLP-linear.tex
+++ b/slides/NLP-linear.tex
@@ -712,7 +712,9 @@ to estimate the error and the gradients based on a sample of $m$ examples.
  \item Scenario: In our language identification problem one of the documents in the training set ($\vec{x}_O$) is an outlier.
  \item The document is actually in German, but is labeled as French.
  
- \item In order to drive the loss down, the learner can identify features (letter bigrams) in $\vec{x}_O$ that occur in only few other documents, and give them very strong weights toward the (incorrect) French class. 
+ \item In order to drive the loss down, the learner can identify features (letter bigrams) in $\vec{x}_O$ that occur in only few other documents.
+ 
+ \item The learner will give these features very strong weights toward the (incorrect) French class. 
 
 \end{itemize}
 \end{scriptsize}
@@ -724,10 +726,99 @@ to estimate the error and the gradients based on a sample of $m$ examples.
 \begin{scriptsize}
 \begin{itemize}
   \item This is a bad solution to the learning problem.
- \item The model is learning something incorrect, and can cause test German documents which share many words with $\vec{x}_O$ to be mistakenly classified as French. 
+ \item The model is learning something incorrect.
+ \item Test German documents which share many words with $\vec{x}_O$ could be mistakenly classified as French. 
  \item We would like to control for such cases by driving the learner away from such misguided solutions.
  \item Idea: it is OK to mis-classify a few examples if they don't fit well with the rest.
  
+\end{itemize}
+\end{scriptsize}
+
+\end{frame}
+
+
+
+\begin{frame}{Regularization}
+\begin{scriptsize}
+\begin{itemize}
+  \item Regularization: we add a regularization term $R$ to the optimization objective.
+  \item  The goal of this term: to control the complexity (large weights) of the parameter value ($\Theta$), and avoid cases of overfitting:
+\begin{equation}
+ \begin{split}
+  \hat{\Theta} \quad & =  \operatorname{argmin}_{\Theta} \mathcal{L}(\Theta) + \lambda R(\Theta) \\
+     \quad & =  \operatorname{argmin}_{\Theta} \frac{1}{n} \sum_{i=1}^n L(f(\vec{x}_i;\Theta), y_i) + \lambda R(\Theta) \\
+ \end{split}
+\end{equation}  
+\item The regularization term considers the parameter values, and scores their complexity.  
+\item The value of hyperparameter $\lambda$ has to be set manually, based on the classification performance on a development set.   
+ 
+\end{itemize}
+\end{scriptsize}
+
+\end{frame}
+
+
+
+\begin{frame}{Regularization}
+\begin{scriptsize}
+\begin{itemize}
+  \item  In practice, the regularizers $R$ equate complexity with large weights.
+  \item They work to keep the parameter values ($\Theta$) low.
+  \item They drive the learner toward solutions with low norms of the parameter matrices ($W$).
+  \item Common choices for $R$ are the $L_2$ norm, the $L_1$ norm, and the elastic-net.
+\end{itemize}
+\end{scriptsize}
+
+\end{frame}
+
+
+\begin{frame}{L$_2$ Regularization}
+\begin{scriptsize}
+\begin{itemize}
+\item  In $L_2$ regularization, $R$ takes the form of the squared $L_2$ norm of the parameters.
+\item Goal: try to keep the sum of the squares of the parameter values low.
+  \begin{displaymath}
+   R_{L_{2}}(W) = ||W||^{2}_{2} = \sum_{i,j}(W_{[i,l]})^2
+  \end{displaymath}
+\item The $L_2$ regularizer is also called a gaussian prior or weight decay.
+\item $L_2$ regularized models are severely punished for high parameter weights.
+\item Once the value is close enough to zero, their effect becomes negligible.
+\item The model will prefer to decrease the value of one parameter with high weight by 1 than to decrease the value of ten parameters that already have relatively low weights by 0.1 each.
+\end{itemize}
+\end{scriptsize}
+
+\end{frame}
+
+
+
+\begin{frame}{L$_1$ Regularization}
+\begin{scriptsize}
+\begin{itemize}
+  \item  In $L_1$ regularization, $R$ takes the form of the $L_1$ norm of the parameters.
+  \item Goal: try to keep the sum of the absolute values of the parameters low.
+  \begin{displaymath}
+   R_{L_{1}}(W) = ||W||_{1} = \sum_{i,j} |W_{[i,l]}|
+  \end{displaymath}
+ \item In contrast to $L_2$ , the $L_1$ regularizer is punished uniformly for low and high values.
+ \item It has an incentive to decrease all the non-zero parameter values toward zero. 
+ \item It thus encourages a sparse solutions—models with many parameters with a zero value. 
+ \item The $L_1$ regularizer is also called a sparse prior or lasso \cite{tibshirani1996regression}. 
+  \end{itemize}
+\end{scriptsize}
+
+\end{frame}
+
+
+\begin{frame}{Elastic-Net}
+\begin{scriptsize}
+\begin{itemize}
+  \item  The elastic-net regularization \cite{zou2005regularization} combines both $L_1$ and $L_2$ regularization:
+ 
+ \begin{displaymath}
+  R_{\text{elactic-net}}(W) = \lambda_{1}R_{L_{1}}(W) + \lambda_{2}R_{L_{2}}(W)
+ \end{displaymath}
+
+  
 \end{itemize}
 \end{scriptsize}
 
@@ -740,11 +831,10 @@ to estimate the error and the gradients based on a sample of $m$ examples.
 \begin{itemize}
 
  \item While the SGD algorithm can and often does produce good results, more advanced algorithms are also available. 
- \item The SGD+Momentum [Polyak, 1964] and Nesterov Momentum [Nesterov, 1983,
-2004, Sutskever et al., 2013] algorithms are variants of SGD in which previous gradients are accumulated and affect the current update.
-\item Adaptive learning rate algorithms including AdaGrad [Duchi et al., 2011], AdaDelta [Zeiler, 2012], RMSProp [Tieleman and Hinton, 2012], and Adam [Kingma and Ba, 2014] are designed to select the learning rate for each minibatch.
+ \item The SGD+Momentum \cite{polyak1964some} and Nesterov Momentum \cite{nesterov2018lectures,sutskever2013importance}  algorithms are variants of SGD in which previous gradients are accumulated and affect the current update. 
+\item Adaptive learning rate algorithms including AdaGrad \cite{duchi2011adaptive}, AdaDelta \cite{zeiler2012adadelta}, RMSProp \cite{tieleman2012lecture}, and Adam \cite{kingma2014adam} are designed to select the learning rate for each minibatch.
 \item This sometimes done on a per-coordinate basis, potentially alleviating the need of fiddling with learning rate scheduling. 
-\item For details of these algorithms, see the original papers or [Bengio et al., 2016, Sections 8.3, 8.4].
+\item For details of these algorithms, see the original papers or \cite{goodfellow2016deep}(Sections 8.3, 8.4).
  
 \end{itemize}
 \end{scriptsize}
