--- a/slides/NLP-neural.tex
+++ b/slides/NLP-neural.tex
@@ -134,8 +134,8 @@
 \begin{center}
 \begin{equation}
 \begin{split}
-NN_{MLP1}(\vec{x}) = g(\vec{x}W^{1}+\vec{b}^{1})W^{2}+\vec{b}^{2} \\
-\vec{x} \in \mathcal{R}^{in}, W^{1} \in \mathcal{R}^{d_{in}\times d_{1}}, \vec{b}^{1} \in \mathcal{R}^{1}, W^{1} \in \mathcal{R}^{in}, \vec{b}^{1} \in \mathcal{R}^{in}   
+\vec{\hat{y}} = NN_{MLP1}(\vec{x}) = g(\vec{x}W^{1}+\vec{b}^{1})W^{2}+\vec{b}^{2} \\
+\vec{x} \in \mathcal{R}^{in}, W^{1} \in \mathcal{R}^{d_{in}\times d_{1}}, \vec{b}^{1} \in \mathcal{R}^{d_{in}}, W^{2} \in \mathcal{R}^{d_{1}\times d_{out}}, \vec{b}^{2} \in \mathcal{R}^{d_{out}}, \vec{\hat{y}} \in \mathcal{R}^{d_{out}}    
 \end{split}
 \end{equation}
 \end{center}
@@ -144,7 +144,7 @@ NN_{MLP1}(\vec{x}) = g(\vec{x}W^{1}+\vec{b}^{1})W^{2}+\vec{b}^{2} \\
 \item The function $g$ is a nonlinear function that is applied element-wise (also called a nonlinearity or an activation function ).
 \item $W^{2}$ and $\vec{b}^{2}$ are the matrix and bias term for a second linear transform.
 
-\item When describing a neural network, one should specify the dimensions of the layers ($d_{1}$) and the input ($d_{in}$).
+\item When describing a neural network, one should specify the dimensions of the layers ($d_{1}$), the input ($d_{in}$), and the output ($d_{out}$).
 \end{itemize}
 
 
@@ -161,7 +161,7 @@ NN_{MLP1}(\vec{x}) = g(\vec{x}W^{1}+\vec{b}^{1})W^{2}+\vec{b}^{2} \\
 \begin{center}
 \begin{equation}
 \begin{split}
-NN_{MLP2}(\vec{x}) & =  \vec{y}  \\
+NN_{MLP2}(\vec{x}) & =  \vec{\hat{y}}  \\
 \vec{h}^{1} &  = g^{1}(\vec{x}W^{1}+\vec{b}^{1}) \\
 \vec{h}^{2} &  = g^{2}(\vec{h}^{1}W^{2}+\vec{b}^{2}) \\
 \vec{y} &  = \vec{h}^{2}W^{3}\\
