--- a/slides/NLP-CRF.tex
+++ b/slides/NLP-CRF.tex
@@ -354,9 +354,25 @@ for all $j = 1, \dots,m$, and for all $s \in S$.
 
 
 
+\begin{frame}{Links}
+\begin{scriptsize}
+\begin{itemize}
+
+\item \url{https://www.depends-on-the-definition.com/sequence-tagging-lstm-crf/}
+
+\item \url{https://www.quora.com/What-are-the-pros-and-cons-of-these-three-sequence-models-MaxEnt-Markov-Model-Conditional-random-fields-and-recurrent-neural-networks}
+
+\item \url{https://people.cs.umass.edu/~mccallum/papers/crf-tutorial.pdf}
+
+\end{itemize}
 
 
-%https://www.depends-on-the-definition.com/sequence-tagging-lstm-crf/
+\end{scriptsize}
+\end{frame}
+
+
+
+
 
 
 \begin{frame}
