--- a/slides/NLP-CRF.tex
+++ b/slides/NLP-CRF.tex
@@ -462,14 +462,14 @@ richer representations than those used in HMMs.
 
 
 
-\begin{frame}{conditional random fields (CRFs)}
+\begin{frame}{Conditional Random Fields (CRFs)}
 \begin{scriptsize}
 
 \begin{itemize}
 
-\item  We now turn to conditional random fields (CRFs).
+\item  We now turn to Conditional Random Fields (CRFs).
 
-\item Notation: for convenience, we'll use $x_{1:m}$ to refer to an input sequence $x_1 ,\dots,x_m$, and $s_{1:m}$ to refer to a sequence of states $s_1, \dots, s_m$.
+\item Notation: for convenience, we'll use $x_{1:m}$ to refer to an input sequence $x_1 ,\dots,x_m$, and $s_{1:m}$ to refer to a sequence of tags $s_1, \dots, s_m$.
 
 \end{itemize}
 
